--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         </div>
       </section>
 
-      <section class="section">
+      <section class="section section--desktop">
         <div class="container">
           <h2 class="section__title">Чим ми займаємося</h2>
           <ul class="our-job">
