--- a/index.html
+++ b/index.html
@@ -169,7 +169,29 @@
           <h2 class="section__title">Наша команда</h2>
           <ul class="workers-list">
             <li class="workers-list__item">
-              <img src="images/team/team_1.jpg" alt="працівник" width="270" />
+              <picture>
+                <source
+                  srcset="./images/team/1-s.jpg 1x ./images/team/1-s@2x.jpg 2x"
+                  media="(max-width:767px)"
+                />
+
+                <source
+                  srcset="./images/team/1-m.jpg 1x ./images/team/1-mb@2x.jpg 2x"
+                  media="(min-width:767px)"
+                  sizes=""
+                  type=""
+                />
+
+                <source
+                  srcset="./images/team/1-l.jpg 1x ./images/team/1-l@2x.jpg 2x"
+                  media="(min-width:1200px)"
+                  sizes=""
+                  type=""
+                />
+
+                <img src="images/team/1-s.jpg" alt="працівник" />
+              </picture>
+
               <h3 class="workers-list__title">Ігор Дем'яненко</h3>
               <p class="workers-list__descr">Product Designer</p>
               <ul class="workers-social">
@@ -204,7 +226,28 @@
               </ul>
             </li>
             <li class="workers-list__item">
-              <img src="images/team/team_2.jpg" alt="працівник" width="270" />
+              <picture>
+                <source
+                  srcset="./images/team/2-s.jpg 1x ./images/team/2-s@2x.jpg 2x"
+                  media="(max-width:767px)"
+                />
+
+                <source
+                  srcset="./images/team/2-m.jpg 1x ./images/team/2-mb@2x.jpg 2x"
+                  media="(min-width:767px)"
+                  sizes=""
+                  type=""
+                />
+
+                <source
+                  srcset="./images/team/2-l.jpg 1x ./images/team/2-l@2x.jpg 2x"
+                  media="(min-width:1200px)"
+                  sizes=""
+                  type=""
+                />
+
+                <img src="images/team/2-s.jpg" alt="працівник" />
+              </picture>
               <h3 class="workers-list__title">Ольга Рєпіна</h3>
               <p class="workers-list__descr">Frontend Developer</p>
               <ul class="workers-social">
@@ -239,7 +282,28 @@
               </ul>
             </li>
             <li class="workers-list__item">
-              <img src="images/team/team_3.jpg" alt="працівник" width="270" />
+              <picture>
+                <source
+                  srcset="./images/team/3-s.jpg 1x ./images/team/3-s@2x.jpg 2x"
+                  media="(max-width:767px)"
+                />
+
+                <source
+                  srcset="./images/team/3-m.jpg 1x ./images/team/3-mb@2x.jpg 2x"
+                  media="(min-width:767px)"
+                  sizes=""
+                  type=""
+                />
+
+                <source
+                  srcset="./images/team/3-l.jpg 1x ./images/team/3-l@2x.jpg 2x"
+                  media="(min-width:1200px)"
+                  sizes=""
+                  type=""
+                />
+
+                <img src="images/team/3-s.jpg" alt="працівник" />
+              </picture>
               <h3 class="workers-list__title">Микола Тарасов</h3>
               <p class="workers-list__descr">Marketing</p>
               <ul class="workers-social">
@@ -274,7 +338,28 @@
               </ul>
             </li>
             <li class="workers-list__item">
-              <img src="images/team/team_4.jpg" alt="працівник" width="270" />
+              <picture>
+                <source
+                  srcset="./images/team/4-s.jpg 1x ./images/team/4-s@2x.jpg 2x"
+                  media="(max-width:767px)"
+                />
+
+                <source
+                  srcset="./images/team/4-m.jpg 1x ./images/team/4-mb@2x.jpg 2x"
+                  media="(min-width:767px)"
+                  sizes=""
+                  type=""
+                />
+
+                <source
+                  srcset="./images/team/4-l.jpg 1x ./images/team/4-l@2x.jpg 2x"
+                  media="(min-width:1200px)"
+                  sizes=""
+                  type=""
+                />
+
+                <img src="images/team/4-s.jpg" alt="працівник" />
+              </picture>
               <h3 class="workers-list__title">Михайло Єрмаков</h3>
               <p class="workers-list__descr">UI Designer</p>
               <ul class="workers-social">
