add media to all index.html

--- a/index.html
+++ b/index.html
@@ -149,15 +149,39 @@
           <h2 class="section__title">Чим ми займаємося</h2>
           <ul class="our-job">
             <li class="our-job__item">
-              <img src="images/do/do_1.jpg" alt="комп'ютер" width="370" />
+              <picture>
+                <source
+                  srcset="./images/do/do_1-l.jpg 1x ./images/do/do_1-l@2x.jpg 2x"
+                  media="(min-width:1200px)"
+                  sizes=""
+                  type=""
+                />
+                <img src="./images/do/do_1-l.jpg" alt="працівник" />
+              </picture>
               <p class="our-job__label">Десктопні додатки</p>
             </li>
             <li class="our-job__item">
-              <img src="images/do/do_2.jpg" alt="телефон" width="370" />
+              <picture>
+                <source
+                  srcset="./images/do/do_2-l.jpg 1x ./images/do/do_2-l@2x.jpg 2x"
+                  media="(min-width:1200px)"
+                  sizes=""
+                  type=""
+                />
+                <img src="./images/do/do_2-l.jpg" alt="працівник" />
+              </picture>
               <p class="our-job__label">Мобільні додатки</p>
             </li>
             <li class="our-job__item">
-              <img src="images/do/do_3.jpg" alt="палітра" width="370" />
+              <picture>
+                <source
+                  srcset="./images/do/do_3-l.jpg 1x ./images/do/do_3-l@2x.jpg 2x"
+                  media="(min-width:1200px)"
+                  sizes=""
+                  type=""
+                />
+                <img src="./images/do/do_3-l.jpg" alt="працівник" />
+              </picture>
               <p class="our-job__label">Дизайнерські рішення</p>
             </li>
           </ul>
