add picture in portfolio page

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 />
 
                 <source
-                  srcset="./images/team/1-m.jpg 1x ./images/team/1-mb@2x.jpg 2x"
+                  srcset="./images/team/1-m.jpg 1x ./images/team/1-m@2x.jpg 2x"
                   media="(min-width:767px)"
                   sizes=""
                   type=""
