add media to portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -160,7 +160,7 @@
                     </p>
                   </div>
                 </div>
-                <div class="works-list__content">
+                <div class="works-list__content works-list__content--pb">
                   <h2 class="works-list__title">Технокряк</h2>
                   <p class="works-list__subtitle">Веб-сайт</p>
                 </div>
@@ -565,5 +565,7 @@
         </div>
       </div>
     </footer>
+
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
