--- a/portfolio.html
+++ b/portfolio.html
@@ -37,10 +37,12 @@
           <div data-menu class="menu-container">
             <ul class="site-nav">
               <li class="site-nav__item">
-                <a href="./index.html" class="site-nav__link site-nav__link--current">Студія</a>
+                <a href="./index.html" class="site-nav__link">Студія</a>
               </li>
               <li class="site-nav__item">
-                <a href="./portfolio.html" class="site-nav__link">Портфоліо</a>
+                <a href="./portfolio.html" class="site-nav__link site-nav__link--current"
+                  >Портфоліо</a
+                >
               </li>
               <li class="site-nav__item">
                 <a href="" class="site-nav__link">Контакти</a>
@@ -73,10 +75,12 @@
           </div>
           <ul class="site-nav tablet">
             <li class="site-nav__item">
-              <a href="./index.html" class="site-nav__link site-nav__link--current">Студія</a>
+              <a href="./index.html" class="site-nav__link">Студія</a>
             </li>
             <li class="site-nav__item">
-              <a href="./portfolio.html" class="site-nav__link">Портфоліо</a>
+              <a href="./portfolio.html" class="site-nav__link site-nav__link--current"
+                >Портфоліо</a
+              >
             </li>
             <li class="site-nav__item">
               <a href="" class="site-nav__link">Контакти</a>
