--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           >
           <button
             type="button"
-            class="menu-toggle js-open-menu"
+            class="navigation__toggle js-open-menu"
             aria-expanded="false"
             aria-controls="menu-container"
             data-menu-button
@@ -34,7 +34,7 @@
               <use class="icon-menu" href="./images/icons/sprite.svg#icon-menu"></use>
             </svg>
           </button>
-          <div data-menu class="menu-container">
+          <div data-menu class="navigation__container">
             <ul class="site-nav">
               <li class="site-nav__item">
                 <a href="./index.html" class="site-nav__link site-nav__link--current">Студія</a>
