--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             aria-controls="menu-container"
             data-menu-button
           >
-            <svg width="40" height="40" aria-label="Перемикач мобільного меню">
+            <svg class="menu__button" width="40" height="40" aria-label="Перемикач мобільного меню">
               <use class="icon-cross" href="./images/icons/sprite.svg#icon-close"></use>
               <use class="icon-menu" href="./images/icons/sprite.svg#icon-menu"></use>
             </svg>
