--- a/index.html
+++ b/index.html
@@ -639,8 +639,10 @@
               <svg class="modal-form__icon--checked" width="16" height="15">
                 <use href="./images/icons/sprite.svg#icon-checkbox-checked"></use>
               </svg>
-              Погоджуюся з розсилкою та приймаю
-              <a href="" class="modal-form__link"> Умови договору</a>
+              <span
+                >Погоджуюся з розсилкою та приймаю
+                <a href="" class="modal-form__link"> Умови договору</a></span
+              >
             </label>
           </div>
 
