fix pictures in pages

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <li class="our-job__item">
               <picture>
                 <source
-                  srcset="./images/do/do_1-l.jpg 1x ./images/do/do_1-l@2x.jpg 2x"
+                  srcset="./images/do/do_1-l.jpg 1x, ./images/do/do_1-l@2x.jpg 2x"
                   media="(min-width:1200px)"
                   sizes=""
                   type=""
@@ -163,7 +163,7 @@
             <li class="our-job__item">
               <picture>
                 <source
-                  srcset="./images/do/do_2-l.jpg 1x ./images/do/do_2-l@2x.jpg 2x"
+                  srcset="./images/do/do_2-l.jpg 1x, ./images/do/do_2-l@2x.jpg 2x"
                   media="(min-width:1200px)"
                   sizes=""
                   type=""
@@ -175,7 +175,7 @@
             <li class="our-job__item">
               <picture>
                 <source
-                  srcset="./images/do/do_3-l.jpg 1x ./images/do/do_3-l@2x.jpg 2x"
+                  srcset="./images/do/do_3-l.jpg 1x, ./images/do/do_3-l@2x.jpg 2x"
                   media="(min-width:1200px)"
                   sizes=""
                   type=""
@@ -195,22 +195,20 @@
             <li class="workers-list__item">
               <picture>
                 <source
-                  srcset="./images/team/1-s.jpg 1x ./images/team/1-s@2x.jpg 2x"
-                  media="(max-width:767px)"
-                />
-
-                <source
-                  srcset="./images/team/1-m.jpg 1x ./images/team/1-m@2x.jpg 2x"
-                  media="(min-width:767px)"
-                  sizes=""
-                  type=""
-                />
-
-                <source
-                  srcset="./images/team/1-l.jpg 1x ./images/team/1-l@2x.jpg 2x"
+                  srcset="./images/team/1-l.jpg 1x, ./images/team/1-l@2x.jpg 2x"
                   media="(min-width:1200px)"
                   sizes=""
                   type=""
+                />
+                <source
+                  srcset="./images/team/1-m.jpg 1x, ./images/team/1-m@2x.jpg 2x"
+                  media="(min-width:768px)"
+                  sizes=""
+                  type=""
+                />
+                <source
+                  srcset="./images/team/1-s.jpg 1x, ./images/team/1-s@2x.jpg 2x"
+                  media="(max-width:767px)"
                 />
 
                 <img src="images/team/1-s.jpg" alt="працівник" />
@@ -252,22 +250,20 @@
             <li class="workers-list__item">
               <picture>
                 <source
-                  srcset="./images/team/2-s.jpg 1x ./images/team/2-s@2x.jpg 2x"
-                  media="(max-width:767px)"
-                />
-
-                <source
-                  srcset="./images/team/2-m.jpg 1x ./images/team/2-mb@2x.jpg 2x"
-                  media="(min-width:767px)"
-                  sizes=""
-                  type=""
-                />
-
-                <source
-                  srcset="./images/team/2-l.jpg 1x ./images/team/2-l@2x.jpg 2x"
+                  srcset="./images/team/2-l.jpg 1x, ./images/team/2-l@2x.jpg 2x"
                   media="(min-width:1200px)"
                   sizes=""
                   type=""
+                />
+                <source
+                  srcset="./images/team/2-m.jpg 1x, ./images/team/2-mb@2x.jpg 2x"
+                  media="(min-width:768px)"
+                  sizes=""
+                  type=""
+                />
+                <source
+                  srcset="./images/team/2-s.jpg 1x, ./images/team/2-s@2x.jpg 2x"
+                  media="(max-width:767px)"
                 />
 
                 <img src="images/team/2-s.jpg" alt="працівник" />
@@ -308,22 +304,20 @@
             <li class="workers-list__item">
               <picture>
                 <source
-                  srcset="./images/team/3-s.jpg 1x ./images/team/3-s@2x.jpg 2x"
-                  media="(max-width:767px)"
-                />
-
-                <source
-                  srcset="./images/team/3-m.jpg 1x ./images/team/3-mb@2x.jpg 2x"
-                  media="(min-width:767px)"
-                  sizes=""
-                  type=""
-                />
-
-                <source
-                  srcset="./images/team/3-l.jpg 1x ./images/team/3-l@2x.jpg 2x"
+                  srcset="./images/team/3-l.jpg 1x, ./images/team/3-l@2x.jpg 2x"
                   media="(min-width:1200px)"
                   sizes=""
                   type=""
+                />
+                <source
+                  srcset="./images/team/3-m.jpg 1x, ./images/team/3-mb@2x.jpg 2x"
+                  media="(min-width:768px)"
+                  sizes=""
+                  type=""
+                />
+                <source
+                  srcset="./images/team/3-s.jpg 1x, ./images/team/3-s@2x.jpg 2x"
+                  media="(max-width:767px)"
                 />
 
                 <img src="images/team/3-s.jpg" alt="працівник" />
@@ -364,22 +358,20 @@
             <li class="workers-list__item">
               <picture>
                 <source
-                  srcset="./images/team/4-s.jpg 1x ./images/team/4-s@2x.jpg 2x"
-                  media="(max-width:767px)"
-                />
-
-                <source
-                  srcset="./images/team/4-m.jpg 1x ./images/team/4-mb@2x.jpg 2x"
-                  media="(min-width:767px)"
-                  sizes=""
-                  type=""
-                />
-
-                <source
-                  srcset="./images/team/4-l.jpg 1x ./images/team/4-l@2x.jpg 2x"
+                  srcset="./images/team/4-l.jpg 1x, ./images/team/4-l@2x.jpg 2x"
                   media="(min-width:1200px)"
                   sizes=""
                   type=""
+                />
+                <source
+                  srcset="./images/team/4-m.jpg 1x, ./images/team/4-mb@2x.jpg 2x"
+                  media="(min-width:768px)"
+                  sizes=""
+                  type=""
+                />
+                <source
+                  srcset="./images/team/4-s.jpg 1x, ./images/team/4-s@2x.jpg 2x"
+                  media="(max-width:767px)"
                 />
 
                 <img src="images/team/4-s.jpg" alt="працівник" />
