--- a/portfolio.html
+++ b/portfolio.html
@@ -136,22 +136,20 @@
                 <div class="works-list__thumb">
                   <picture>
                     <source
-                      srcset="./images/works/1-s.jpg 1x ./images/works/1-s@2x.jpg 2x"
-                      media="(max-width:767px)"
-                    />
-
-                    <source
-                      srcset="./images/works/1-m.jpg 1x ./images/works/1-m@2x.jpg 2x"
-                      media="(min-width:767px)"
-                      sizes=""
-                      type=""
-                    />
-
-                    <source
-                      srcset="./images/works/1-l.jpg 1x ./images/works/1-l@2x.jpg 2x"
+                      srcset="./images/works/1-l.jpg 1x, ./images/works/1-l@2x.jpg 2x"
                       media="(min-width:1200px)"
                       sizes=""
                       type=""
+                    />
+                    <source
+                      srcset="./images/works/1-m.jpg 1x, ./images/works/1-m@2x.jpg 2x"
+                      media="(min-width:768px)"
+                      sizes=""
+                      type=""
+                    />
+                    <source
+                      srcset="./images/works/1-s.jpg 1x, ./images/works/1-s@2x.jpg 2x"
+                      media="(max-width:767px)"
                     />
 
                     <img src="./images/works/1-s.jpg" alt="Приклад роботи" />
@@ -175,22 +173,20 @@
                 <div class="works-list__thumb">
                   <picture>
                     <source
-                      srcset="./images/works/2-s.jpg 1x ./images/works/2-s@2x.jpg 2x"
-                      media="(max-width:767px)"
-                    />
-
-                    <source
-                      srcset="./images/works/2-m.jpg 1x ./images/works/2-m@2x.jpg 2x"
-                      media="(min-width:767px)"
-                      sizes=""
-                      type=""
-                    />
-
-                    <source
-                      srcset="./images/works/2-l.jpg 1x ./images/works/2-l@2x.jpg 2x"
+                      srcset="./images/works/2-l.jpg 1x, ./images/works/2-l@2x.jpg 2x"
                       media="(min-width:1200px)"
                       sizes=""
                       type=""
+                    />
+                    <source
+                      srcset="./images/works/2-m.jpg 1x, ./images/works/2-m@2x.jpg 2x"
+                      media="(min-width:768px)"
+                      sizes=""
+                      type=""
+                    />
+                    <source
+                      srcset="./images/works/2-s.jpg 1x, ./images/works/2-s@2x.jpg 2x"
+                      media="(max-width:767px)"
                     />
 
                     <img src="./images/works/2-s.jpg" alt="Приклад роботи" />
@@ -215,22 +211,20 @@
                 <div class="works-list__thumb">
                   <picture>
                     <source
-                      srcset="./images/works/3-s.jpg 1x ./images/works/3-s@2x.jpg 2x"
-                      media="(max-width:767px)"
-                    />
-
-                    <source
-                      srcset="./images/works/3-m.jpg 1x ./images/works/3-m@2x.jpg 2x"
-                      media="(min-width:767px)"
-                      sizes=""
-                      type=""
-                    />
-
-                    <source
-                      srcset="./images/works/3-l.jpg 1x ./images/works/3-l@2x.jpg 2x"
+                      srcset="./images/works/3-l.jpg 1x, ./images/works/3-l@2x.jpg 2x"
                       media="(min-width:1200px)"
                       sizes=""
                       type=""
+                    />
+                    <source
+                      srcset="./images/works/3-m.jpg 1x, ./images/works/3-m@2x.jpg 2x"
+                      media="(min-width:768px)"
+                      sizes=""
+                      type=""
+                    />
+                    <source
+                      srcset="./images/works/3-s.jpg 1x, ./images/works/3-s@2x.jpg 2x"
+                      media="(max-width:767px)"
                     />
 
                     <img src="./images/works/3-s.jpg" alt="Приклад роботи" />
@@ -254,22 +248,20 @@
                 <div class="works-list__thumb">
                   <picture>
                     <source
-                      srcset="./images/works/4-s.jpg 1x ./images/works/4-s@2x.jpg 2x"
-                      media="(max-width:767px)"
-                    />
-
-                    <source
-                      srcset="./images/works/4-m.jpg 1x ./images/works/4-m@2x.jpg 2x"
-                      media="(min-width:767px)"
-                      sizes=""
-                      type=""
-                    />
-
-                    <source
-                      srcset="./images/works/4-l.jpg 1x ./images/works/4-l@2x.jpg 2x"
+                      srcset="./images/works/4-l.jpg 1x, ./images/works/4-l@2x.jpg 2x"
                       media="(min-width:1200px)"
                       sizes=""
                       type=""
+                    />
+                    <source
+                      srcset="./images/works/4-m.jpg 1x, ./images/works/4-m@2x.jpg 2x"
+                      media="(min-width:768px)"
+                      sizes=""
+                      type=""
+                    />
+                    <source
+                      srcset="./images/works/4-s.jpg 1x, ./images/works/4-s@2x.jpg 2x"
+                      media="(max-width:767px)"
                     />
 
                     <img src="./images/works/4-s.jpg" alt="Приклад роботи" />
@@ -293,22 +285,20 @@
                 <div class="works-list__thumb">
                   <picture>
                     <source
-                      srcset="./images/works/5-s.jpg 1x ./images/works/5-s@2x.jpg 2x"
-                      media="(max-width:767px)"
-                    />
-
-                    <source
-                      srcset="./images/works/5-m.jpg 1x ./images/works/5-m@2x.jpg 2x"
-                      media="(min-width:767px)"
-                      sizes=""
-                      type=""
-                    />
-
-                    <source
-                      srcset="./images/works/5-l.jpg 1x ./images/works/5-l@2x.jpg 2x"
+                      srcset="./images/works/5-l.jpg 1x, ./images/works/5-l@2x.jpg 2x"
                       media="(min-width:1200px)"
                       sizes=""
                       type=""
+                    />
+                    <source
+                      srcset="./images/works/5-m.jpg 1x, ./images/works/5-m@2x.jpg 2x"
+                      media="(min-width:768px)"
+                      sizes=""
+                      type=""
+                    />
+                    <source
+                      srcset="./images/works/5-s.jpg 1x, ./images/works/5-s@2x.jpg 2x"
+                      media="(max-width:767px)"
                     />
 
                     <img src="./images/works/5-s.jpg" alt="Приклад роботи" />
@@ -332,22 +322,20 @@
                 <div class="works-list__thumb">
                   <picture>
                     <source
-                      srcset="./images/works/6-s.jpg 1x ./images/works/6-s@2x.jpg 2x"
-                      media="(max-width:767px)"
-                    />
-
-                    <source
-                      srcset="./images/works/6-m.jpg 1x ./images/works/6-m@2x.jpg 2x"
-                      media="(min-width:767px)"
-                      sizes=""
-                      type=""
-                    />
-
-                    <source
-                      srcset="./images/works/6-l.jpg 1x ./images/works/6-l@2x.jpg 2x"
+                      srcset="./images/works/6-l.jpg 1x, ./images/works/6-l@2x.jpg 2x"
                       media="(min-width:1200px)"
                       sizes=""
                       type=""
+                    />
+                    <source
+                      srcset="./images/works/6-m.jpg 1x, ./images/works/6-m@2x.jpg 2x"
+                      media="(min-width:768px)"
+                      sizes=""
+                      type=""
+                    />
+                    <source
+                      srcset="./images/works/6-s.jpg 1x, ./images/works/6-s@2x.jpg 2x"
+                      media="(max-width:767px)"
                     />
 
                     <img src="./images/works/6-s.jpg" alt="Приклад роботи" />
@@ -371,22 +359,20 @@
                 <div class="works-list__thumb">
                   <picture>
                     <source
-                      srcset="./images/works/7-s.jpg 1x ./images/works/7-s@2x.jpg 2x"
-                      media="(max-width:767px)"
-                    />
-
-                    <source
-                      srcset="./images/works/7-m.jpg 1x ./images/works/7-m@2x.jpg 2x"
-                      media="(min-width:767px)"
-                      sizes=""
-                      type=""
-                    />
-
-                    <source
-                      srcset="./images/works/7-l.jpg 1x ./images/works/7-l@2x.jpg 2x"
+                      srcset="./images/works/7-l.jpg 1x, ./images/works/7-l@2x.jpg 2x"
                       media="(min-width:1200px)"
                       sizes=""
                       type=""
+                    />
+                    <source
+                      srcset="./images/works/7-m.jpg 1x, ./images/works/7-m@2x.jpg 2x"
+                      media="(min-width:768px)"
+                      sizes=""
+                      type=""
+                    />
+                    <source
+                      srcset="./images/works/7-s.jpg 1x, ./images/works/7-s@2x.jpg 2x"
+                      media="(max-width:767px)"
                     />
 
                     <img src="./images/works/7-s.jpg" alt="Приклад роботи" />
@@ -410,22 +396,20 @@
                 <div class="works-list__thumb">
                   <picture>
                     <source
-                      srcset="./images/works/8-s.jpg 1x ./images/works/8-s@2x.jpg 2x"
-                      media="(max-width:767px)"
-                    />
-
-                    <source
-                      srcset="./images/works/8-m.jpg 1x ./images/works/8-m@2x.jpg 2x"
-                      media="(min-width:767px)"
-                      sizes=""
-                      type=""
-                    />
-
-                    <source
-                      srcset="./images/works/8-l.jpg 1x ./images/works/8-l@2x.jpg 2x"
+                      srcset="./images/works/8-l.jpg 1x, ./images/works/8-l@2x.jpg 2x"
                       media="(min-width:1200px)"
                       sizes=""
                       type=""
+                    />
+                    <source
+                      srcset="./images/works/8-m.jpg 1x, ./images/works/8-m@2x.jpg 2x"
+                      media="(min-width:768px)"
+                      sizes=""
+                      type=""
+                    />
+                    <source
+                      srcset="./images/works/8-s.jpg 1x, ./images/works/8-s@2x.jpg 2x"
+                      media="(max-width:767px)"
                     />
 
                     <img src="./images/works/8-s.jpg" alt="Приклад роботи" />
@@ -449,22 +433,20 @@
                 <div class="works-list__thumb">
                   <picture>
                     <source
-                      srcset="./images/works/9-s.jpg 1x ./images/works/9-s@2x.jpg 2x"
-                      media="(max-width:767px)"
-                    />
-
-                    <source
-                      srcset="./images/works/9-m.jpg 1x ./images/works/9-m@2x.jpg 2x"
-                      media="(min-width:767px)"
-                      sizes=""
-                      type=""
-                    />
-
-                    <source
-                      srcset="./images/works/9-l.jpg 1x ./images/works/9-l@2x.jpg 2x"
+                      srcset="./images/works/9-l.jpg 1x, ./images/works/9-l@2x.jpg 2x"
                       media="(min-width:1200px)"
                       sizes=""
                       type=""
+                    />
+                    <source
+                      srcset="./images/works/9-m.jpg 1x, ./images/works/9-m@2x.jpg 2x"
+                      media="(min-width:768px)"
+                      sizes=""
+                      type=""
+                    />
+                    <source
+                      srcset="./images/works/9-s.jpg 1x, ./images/works/9-s@2x.jpg 2x"
+                      media="(max-width:767px)"
                     />
 
                     <img src="./images/works/9-s.jpg" alt="Приклад роботи" />
