add fixes to media and change sprite to icons

--- a/portfolio.html
+++ b/portfolio.html
@@ -26,12 +26,11 @@
             type="button"
             class="navigation__toggle js-open-menu"
             aria-expanded="false"
-            aria-controls="menu-container"
             data-menu-button
           >
             <svg width="40" height="40" aria-label="Перемикач мобільного меню">
-              <use class="icon-cross" href="./images/icons/sprite.svg#icon-close"></use>
-              <use class="icon-menu" href="./images/icons/sprite.svg#icon-menu"></use>
+              <use class="icon-cross" href="./images/icons.svg#icon-close"></use>
+              <use class="icon-menu" href="./images/icons.svg#icon-menu"></use>
             </svg>
           </button>
           <div data-menu class="navigation__container">
@@ -52,7 +51,7 @@
               <li class="out-nav__item">
                 <a href="tel:+380961111111" class="out-nav__link">
                   <svg class="out-nav__icon" width="10" height="16">
-                    <use href="./images/icons/sprite.svg#icon-phone"></use>
+                    <use href="./images/icons.svg#icon-phone"></use>
                   </svg>
                   +38 096 111 11 11</a
                 >
@@ -60,7 +59,7 @@
               <li class="out-nav__item">
                 <a href="mailto:info@devstudio.com" class="out-nav__link mail">
                   <svg class="out-nav__icon" width="16" height="12">
-                    <use href="./images/icons/sprite.svg#icon-mail"></use>
+                    <use href="./images/icons.svg#icon-mail"></use>
                   </svg>
                   info@devstudio.com</a
                 >
@@ -91,7 +90,7 @@
           <li class="out-nav__item">
             <a href="mailto:info@devstudio.com" class="out-nav__link">
               <svg class="out-nav__icon" width="16" height="12">
-                <use href="./images/icons/sprite.svg#icon-mail"></use>
+                <use href="./images/icons.svg#icon-mail"></use>
               </svg>
               info@devstudio.com</a
             >
@@ -99,7 +98,7 @@
           <li class="out-nav__item">
             <a href="tel:+380961111111" class="out-nav__link">
               <svg class="out-nav__icon" width="10" height="16">
-                <use href="./images/icons/sprite.svg#icon-phone"></use>
+                <use href="./images/icons.svg#icon-phone"></use>
               </svg>
               +38 096 111 11 11</a
             >
@@ -138,14 +137,10 @@
                     <source
                       srcset="./images/works/1-l.jpg 1x, ./images/works/1-l@2x.jpg 2x"
                       media="(min-width:1200px)"
-                      sizes=""
-                      type=""
                     />
                     <source
                       srcset="./images/works/1-m.jpg 1x, ./images/works/1-m@2x.jpg 2x"
                       media="(min-width:768px)"
-                      sizes=""
-                      type=""
                     />
                     <source
                       srcset="./images/works/1-s.jpg 1x, ./images/works/1-s@2x.jpg 2x"
@@ -162,7 +157,7 @@
                     </p>
                   </div>
                 </div>
-                <div class="works-list__content works-list__content--pb">
+                <div class="works-list__content">
                   <h2 class="works-list__title">Технокряк</h2>
                   <p class="works-list__subtitle">Веб-сайт</p>
                 </div>
@@ -175,14 +170,10 @@
                     <source
                       srcset="./images/works/2-l.jpg 1x, ./images/works/2-l@2x.jpg 2x"
                       media="(min-width:1200px)"
-                      sizes=""
-                      type=""
                     />
                     <source
                       srcset="./images/works/2-m.jpg 1x, ./images/works/2-m@2x.jpg 2x"
                       media="(min-width:768px)"
-                      sizes=""
-                      type=""
                     />
                     <source
                       srcset="./images/works/2-s.jpg 1x, ./images/works/2-s@2x.jpg 2x"
@@ -213,14 +204,10 @@
                     <source
                       srcset="./images/works/3-l.jpg 1x, ./images/works/3-l@2x.jpg 2x"
                       media="(min-width:1200px)"
-                      sizes=""
-                      type=""
                     />
                     <source
                       srcset="./images/works/3-m.jpg 1x, ./images/works/3-m@2x.jpg 2x"
                       media="(min-width:768px)"
-                      sizes=""
-                      type=""
                     />
                     <source
                       srcset="./images/works/3-s.jpg 1x, ./images/works/3-s@2x.jpg 2x"
@@ -250,14 +237,10 @@
                     <source
                       srcset="./images/works/4-l.jpg 1x, ./images/works/4-l@2x.jpg 2x"
                       media="(min-width:1200px)"
-                      sizes=""
-                      type=""
                     />
                     <source
                       srcset="./images/works/4-m.jpg 1x, ./images/works/4-m@2x.jpg 2x"
                       media="(min-width:768px)"
-                      sizes=""
-                      type=""
                     />
                     <source
                       srcset="./images/works/4-s.jpg 1x, ./images/works/4-s@2x.jpg 2x"
@@ -287,14 +270,10 @@
                     <source
                       srcset="./images/works/5-l.jpg 1x, ./images/works/5-l@2x.jpg 2x"
                       media="(min-width:1200px)"
-                      sizes=""
-                      type=""
                     />
                     <source
                       srcset="./images/works/5-m.jpg 1x, ./images/works/5-m@2x.jpg 2x"
                       media="(min-width:768px)"
-                      sizes=""
-                      type=""
                     />
                     <source
                       srcset="./images/works/5-s.jpg 1x, ./images/works/5-s@2x.jpg 2x"
@@ -324,14 +303,10 @@
                     <source
                       srcset="./images/works/6-l.jpg 1x, ./images/works/6-l@2x.jpg 2x"
                       media="(min-width:1200px)"
-                      sizes=""
-                      type=""
                     />
                     <source
                       srcset="./images/works/6-m.jpg 1x, ./images/works/6-m@2x.jpg 2x"
                       media="(min-width:768px)"
-                      sizes=""
-                      type=""
                     />
                     <source
                       srcset="./images/works/6-s.jpg 1x, ./images/works/6-s@2x.jpg 2x"
@@ -361,14 +336,10 @@
                     <source
                       srcset="./images/works/7-l.jpg 1x, ./images/works/7-l@2x.jpg 2x"
                       media="(min-width:1200px)"
-                      sizes=""
-                      type=""
                     />
                     <source
                       srcset="./images/works/7-m.jpg 1x, ./images/works/7-m@2x.jpg 2x"
                       media="(min-width:768px)"
-                      sizes=""
-                      type=""
                     />
                     <source
                       srcset="./images/works/7-s.jpg 1x, ./images/works/7-s@2x.jpg 2x"
@@ -398,14 +369,10 @@
                     <source
                       srcset="./images/works/8-l.jpg 1x, ./images/works/8-l@2x.jpg 2x"
                       media="(min-width:1200px)"
-                      sizes=""
-                      type=""
                     />
                     <source
                       srcset="./images/works/8-m.jpg 1x, ./images/works/8-m@2x.jpg 2x"
                       media="(min-width:768px)"
-                      sizes=""
-                      type=""
                     />
                     <source
                       srcset="./images/works/8-s.jpg 1x, ./images/works/8-s@2x.jpg 2x"
@@ -435,14 +402,10 @@
                     <source
                       srcset="./images/works/9-l.jpg 1x, ./images/works/9-l@2x.jpg 2x"
                       media="(min-width:1200px)"
-                      sizes=""
-                      type=""
                     />
                     <source
                       srcset="./images/works/9-m.jpg 1x, ./images/works/9-m@2x.jpg 2x"
                       media="(min-width:768px)"
-                      sizes=""
-                      type=""
                     />
                     <source
                       srcset="./images/works/9-s.jpg 1x, ./images/works/9-s@2x.jpg 2x"
@@ -471,83 +434,85 @@
     </main>
 
     <footer class="page-footer">
-      <div class="container">
-        <div class="wrapper">
-          <div class="page-footer__contacts">
-            <a href="./index.html" class="logo logo--white"
-              ><span class="logo__text logo__text--blue">Web</span>Studio</a
-            >
-            <address>
-              <ul class="address-list">
-                <li class="address-list__item">
-                  <a
-                    href="https://bit.ly/3dlaHwP"
-                    target="_blank"
-                    rel="norefferrer noopener"
-                    class="address-list__link"
-                    >м. Київ, пр-т Лесі Українки, 26</a
-                  >
-                </li>
-                <li class="address-list__item">
-                  <a
-                    href="mailto:info@devstudio.com"
-                    class="address-list__link address-list__link--transparent"
-                    >info@devstudio.com</a
-                  >
-                </li>
-                <li class="address-list__item">
-                  <a
-                    href="tel:+380961111111"
-                    class="address-list__link address-list__link--transparent"
-                    >+38 096 111 11 11</a
-                  >
-                </li>
-              </ul>
-            </address>
-          </div>
-          <div class="page-footer__social">
-            <p class="page-footer__title">Приєднуйтесь</p>
-            <ul class="social-list">
-              <li class="social-list__item">
-                <a href="" class="social-list__link">
-                  <svg class="social-list__icon">
-                    <use href="./images/icons/sprite.svg#icon-insta"></use>
-                  </svg>
-                </a>
+      <div class="container wrapper">
+        <div class="page-footer__contacts">
+          <a href="./index.html" class="logo logo--white"
+            ><span class="logo__text logo__text--blue">Web</span>Studio</a
+          >
+          <address>
+            <ul class="address-list">
+              <li class="address-list__item">
+                <a
+                  href="https://bit.ly/3dlaHwP"
+                  target="_blank"
+                  rel="norefferrer noopener"
+                  class="address-list__link"
+                  >м. Київ, пр-т Лесі Українки, 26</a
+                >
               </li>
-              <li class="social-list__item">
-                <a href="" class="social-list__link">
-                  <svg class="social-list__icon">
-                    <use href="./images/icons/sprite.svg#icon-twitter"></use>
-                  </svg>
-                </a>
+              <li class="address-list__item">
+                <a
+                  href="mailto:info@devstudio.com"
+                  class="address-list__link address-list__link--transparent"
+                  >info@devstudio.com</a
+                >
               </li>
-              <li class="social-list__item">
-                <a href="" class="social-list__link">
-                  <svg class="social-list__icon">
-                    <use href="./images/icons/sprite.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="social-list__item">
-                <a href="" class="social-list__link">
-                  <svg class="social-list__icon">
-                    <use href="./images/icons/sprite.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
+              <li class="address-list__item">
+                <a
+                  href="tel:+380961111111"
+                  class="address-list__link address-list__link--transparent"
+                  >+38 096 111 11 11</a
+                >
               </li>
             </ul>
-          </div>
-
-          <div class="page-footer__form">
-            <p class="page-footer__title">Підпишіться на розсилку</p>
-            <form class="form-signup">
-              <label class="form-signup__label">
-                <input type="email" name="email" placeholder="E-mail" class="form-signup__input" />
-              </label>
-              <button type="submit" class="form-signup__btn">Підписатися</button>
-            </form>
-          </div>
+          </address>
+        </div>
+        <div class="page-footer__social">
+          <p class="page-footer__title">Приєднуйтесь</p>
+          <ul class="social-list">
+            <li class="social-list__item">
+              <a href="" class="social-list__link">
+                <svg class="social-list__icon">
+                  <use href="./images/icons.svg#icon-insta"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list__item">
+              <a href="" class="social-list__link">
+                <svg class="social-list__icon">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list__item">
+              <a href="" class="social-list__link">
+                <svg class="social-list__icon">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list__item">
+              <a href="" class="social-list__link">
+                <svg class="social-list__icon">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="page-footer__form">
+          <p class="page-footer__title">Підпишіться на розсилку</p>
+          <form class="form-signup">
+            <label class="form-signup__label">
+              <input type="email" name="email" placeholder="E-mail" class="form-signup__input" />
+            </label>
+            <button type="submit" class="form-signup__btn">
+              Підписатися
+              <svg class="form-signup__icon">
+                <use href="./images/icons.svg#icon-signup"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
